fetch and populated the cart sessions
