# apps/backend/internal/handler/handlers.go
@@ -6,22 +6,23 @@ import (
 )
 
 type Handlers struct {
-	Health  *HealthHandler
-	OpenAPI *OpenAPIHandler
-	User    *UserHandler
+	Health   *HealthHandler
+	OpenAPI  *OpenAPIHandler
+	User     *UserHandler
 	Vendor   *VendorHandler
-	Search  *SearchHandler
+	Search   *SearchHandler
+	Cart     *CartHandler
 	Webhooks *WebhookHandler
-
 }
 
 func NewHandlers(s *server.Server, services *service.Services) *Handlers {
 	return &Handlers{
-		Health:  NewHealthHandler(s),
-		OpenAPI: NewOpenAPIHandler(s),
-		User: NewUserHandler(s, services.User),
-		Vendor: NewVendorHandler(s,services.Vendor),
-		Search: NewSearchHandler(s,services.Search),
+		Health:   NewHealthHandler(s),
+		OpenAPI:  NewOpenAPIHandler(s),
+		User:     NewUserHandler(s, services.User),
+		Vendor:   NewVendorHandler(s, services.Vendor),
+		Search:   NewSearchHandler(s, services.Search),
+		Cart:     NewCartHandler(s, services.Cart),
 		Webhooks: NewWebhookHandler(s, services.User),
 	}
 }
