# apps/backend/internal/model/cart/cart-vendor.go
@@ -7,11 +7,11 @@ type CartVendor struct {
 	model.Base
 	CartSessionID       string   `json:"cartSessionId" db:"cart_session_id"`
 	VendorID            string   `json:"vendorId" db:"vendor_id"`
-	Subtotal            float64  `json:"subtotal" db:"subtotal"`
+	Subtotal            *float64  `json:"subtotal" db:"subtotal"`
 	DeliveryCharge      *float64 `json:"deliveryCharge,omitempty" db:"delivery_charge"` // nullable, TBD
 	VendorServiceCharge float64  `json:"vendorServiceCharge" db:"vendor_service_charge"`
 	VAT                 float64  `json:"vat" db:"vat"`
 	VendorDiscount      float64  `json:"vendorDiscount" db:"vendor_discount"`
-	Total               float64  `json:"total" db:"total"`
+	Total               *float64  `json:"total" db:"total"`
 	
 }
